--- a/src/app/modules/media/media.scss
+++ b/src/app/modules/media/media.scss
@@ -471,6 +471,7 @@ m-media--grid{
   width: auto;
   max-width: 1168px;
   margin: $minds-margin * 2;
+  margin-bottom: 50px;
   box-sizing: border-box;
   border: 1px solid #EEE;
 
